--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@shadcn/ui": "^0.0.4",
     "cra-template": "1.2.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
   },
