--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
     "cra-template": "1.2.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.475.0",
+    "papaparse": "^5.5.2",
     "react": "^19.0.0",
+    "react-date-picker": "^11.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
