Modified .env variables + added redirects.
For deployment.

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_BASE_URL='http://localhost:5000/api'
+REACT_APP_API_BASE_URL=<your-backend-api-url>/api  # Replace with the production URL of your backend, e.g., https://your-backend-url.com/api.
