--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,8 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
+    "qrcode": "^1.5.4",
+    "speakeasy": "^2.0.0",
     "xss-clean": "^0.1.4"
   }
 }
