Added Manager MFA + Users page.
Managers now use MFA codes to authorize + Admins can now view and manage users on a newly built separate page.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@shadcn/ui": "^0.0.4",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.475.0",
