Backend API ping.
Modified the backend API to keep it awake during "business hours" so that testing can happen smoothly.

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,9 @@
-PORT=5000  # Can remain as-is, but not needed for most cloud providers.
+PORT=5000  # Can remain as-is
 ATLAS_URI=<your-mongodb-atlas-connection-uri>  # Replace with your MongoDB Atlas URI.
 JWT_SECRET=<your-jwt-secret>  # Replace with your secure JWT secret key.
 FRONTEND_URL=<your-frontend-production-url>  # Replace with the production URL of your frontend, e.g., https://your-frontend-url.netlify.app.
+
+PING_INTERVAL =<your-ping-interval> # In milliseconds
+TIMEZONE_OFFSET = <your-timezone-offset> # In minutes
+BUSINESS_HOURS_START =<your-business-start-hour> # 24 hour number
+BUSINESS_HOURS_END =<your-business-end-hour> # 24 hour number
