Updated self-ping to prevent 404 errors

--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,4 @@ PING_INTERVAL =<your-ping-interval> # In milliseconds
 TIMEZONE_OFFSET = <your-timezone-offset> # In minutes
 BUSINESS_HOURS_START =<your-business-start-hour> # 24 hour number
 BUSINESS_HOURS_END =<your-business-end-hour> # 24 hour number
+RENDER_EXTERNAL_URL = <your-render-api-url>
